<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Neil River is in Egypt.</string>
    <string name="question_america">The amazon river is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>

    <string name="cheat_button">Cheat!</string>
    <string name="show_answer">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong!</string>

    <string name="api_level">API Level %1$d</string>



</resources>
